objects/ssot__BenefitAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitAssignmentPriority__c</fullName>
        <label>Benefit Assignment Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAssignmentStatus__c</fullName>
        <label>Benefit Assignment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanId__c</fullName>
        <label>Care Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EnrolleeId__c</fullName>
        <label>Enrollee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentCount__c</fullName>
        <label>Enrollement Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementAmount__c</fullName>
        <label>Entitlement Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Assignment Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitId__c</fullName>
        <label>Loyalty Benefit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumBenefitAmount__c</fullName>
        <label>Maximum Benefit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumBenefitAmount__c</fullName>
        <label>Minimum Benefit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramEnrollmentId__c</fullName>
        <label>Program Enrollment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderId__c</fullName>
        <label>Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecertificationDueDate__c</fullName>
        <label>Recertification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726572927_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitAssignment_BenefitId_map_Prog_rel</label>
        <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
        <relationshipLabel>BenefitAssignment_BenefitId_map_Prog_rel</relationshipLabel>
        <relationshipName>rel_1716726572927_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726574013_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitAssignment_CarePlanId_map_Car_rel</label>
        <referenceTo>ssot__CarePlan__dlm</referenceTo>
        <relationshipLabel>BenefitAssignment_CarePlanId_map_Car_rel</relationshipLabel>
        <relationshipName>rel_1716726574013_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726630436_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitAssignment_ProgramEnrollmentI_rel</label>
        <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
        <relationshipLabel>BenefitAssignment_ProgramEnrollmentI_rel</relationshipLabel>
        <relationshipName>rel_1716726630436_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>